# git-web-exporter

./: .editorconfig  README.md  main.py  pyproject.toml  setup.cfg
templates/: base.html  styles.css
